--- a/16_December_Practice.ipynb
+++ b/16_December_Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBf85Ri3AJV4KsDsWBLLLj",
+      "authorship_tag": "ABX9TyO50XmSjYWHHMuM9DBeVacS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,12 +55,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = 4       # x is of type int\n",
+        "#x = \"Sally\" # x is now of type str\n",
+        "print(x)"
+      ],
       "metadata": {
-        "id": "oi0OMdcWmYuw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oi0OMdcWmYuw",
+        "outputId": "c2b7a3ef-136c-4478-ffda-7dab74426867"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
     }
   ]
 }
