--- a/16_December_Practice.ipynb
+++ b/16_December_Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO50XmSjYWHHMuM9DBeVacS",
+      "authorship_tag": "ABX9TyMtL/ynMVCTHkMGcLeqvvXh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,6 +74,35 @@
           "name": "stdout",
           "text": [
             "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "x, y, z= 1, str(3), b'3'\n",
+        "print(x, type(x), sys.getsizeof(x))\n",
+        "print(y, type(y), sys.getsizeof(y))\n",
+        "print(z, type(z), sys.getsizeof(z))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_RUxUi8lwHU1",
+        "outputId": "c6631c02-402d-4112-c56f-8a6c098fd7de"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 <class 'int'> 28\n",
+            "3 <class 'str'> 50\n",
+            "b'3' <class 'bytes'> 34\n"
           ]
         }
       ]
