--- a/16_December_Practice.ipynb
+++ b/16_December_Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtL/ynMVCTHkMGcLeqvvXh",
+      "authorship_tag": "ABX9TyPt5wHo+D8ftjZBdVWAVyh6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,6 +55,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "y8KSA4o22Ei3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "x = 4       # x is of type int\n",
         "#x = \"Sally\" # x is now of type str\n",
@@ -67,7 +76,7 @@
         "id": "oi0OMdcWmYuw",
         "outputId": "c2b7a3ef-136c-4478-ffda-7dab74426867"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +103,7 @@
         "id": "_RUxUi8lwHU1",
         "outputId": "c6631c02-402d-4112-c56f-8a6c098fd7de"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,6 +112,33 @@
             "1 <class 'int'> 28\n",
             "3 <class 'str'> 50\n",
             "b'3' <class 'bytes'> 34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"Rashed\"\n",
+        "age=27\n",
+        "#txt = \"His name is {} and he is {} years old\"\n",
+        "#print(txt.format (name, age)) #alternative way\n",
+        "print(f'His name is {name} and he is {27} years old')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OaJVVsCL2IRf",
+        "outputId": "6a2a99e1-4396-4a9b-f798-ad102d88f68e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "His name is Rashed and he is 27 years old\n"
           ]
         }
       ]
