--- a/16_December_Practice.ipynb
+++ b/16_December_Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt5wHo+D8ftjZBdVWAVyh6",
+      "authorship_tag": "ABX9TyMRsAPC7H34mW88RFXCX1FL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,6 +139,31 @@
           "name": "stdout",
           "text": [
             "His name is Rashed and he is 27 years old\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=10\n",
+        "y=(\"Rashed\")\n",
+        "print(f\"{x} {y}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QmxLTdyc5kMx",
+        "outputId": "0f90e441-0a37-4495-fbba-12d9928f2179"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 Rashed\n"
           ]
         }
       ]
