--- a/16_December_Practice.ipynb
+++ b/16_December_Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPW82k1N2gx+lQKPE+0fqYo",
+      "authorship_tag": "ABX9TyMw5UAfhFp62g39mOcvp0VJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -595,6 +595,39 @@
           "text": [
             "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
             "[0, 1, 3, 4, 5, 6, 7, 8, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "li = [i for i in range(10)]  # Create list from 0 to 9\n",
+        "print(\"Original list (li):\", li)\n",
+        "\n",
+        "li1 = li[:2] + li[3:]  # Exclude the element at index 2 (which is 2)\n",
+        "print(\"Modified list (li1):\", li1)\n",
+        "\n",
+        "# Find the missing value\n",
+        "missing_value = set(li) - set(li1)\n",
+        "print(\"Missing value:\", missing_value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kkdd0tveUW_D",
+        "outputId": "d078bb99-afae-4c71-d431-d0c5d9cf7515"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original list (li): [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+            "Modified list (li1): [0, 1, 3, 4, 5, 6, 7, 8, 9]\n",
+            "Missing value: {2}\n"
           ]
         }
       ]
