--- a/06_01_2025.ipynb
+++ b/06_01_2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyON9WlARLc3sAk8N34vbCeC",
+      "authorship_tag": "ABX9TyPP3uGKcVuarIRhCxatJNHy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,6 +255,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Generate a Function**"
+      ],
+      "metadata": {
+        "id": "xUD9vgzZHwHX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -318,9 +327,9 @@
           "height": 472
         },
         "id": "REzT2tX4GVVQ",
-        "outputId": "2b28d7fe-2978-466a-97cc-64ac296bffcd"
+        "outputId": "97e7da6f-7f30-46e6-925b-c102b6a9386d"
       },
-      "execution_count": 23,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
